--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,23 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-## User settings
-xcuserdata/
-
-## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
-*.xcscmblueprint
-*.xccheckout
-
-## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
+## Build generated
 build/
 DerivedData/
-*.moved-aside
+# Android/IJ
+#
+.idea
+.gradle
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+## Various settings
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -21,3 +27,25 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+xcuserdata/
+
+## Other
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
+
+.svn
+.ThemeModifyDate
+*.orig
+
+
+Pods/
+mtt.xcworkspace/
+Podfile.lock
+
+# OCLint
+xcodebuild.log
+compile_commands.json
+oclint.xml
+
+QBCocoapodsWorkspace/
